feat: implementar estructuras de datos, persistencia y estadísticas
- Reemplazar ArrayList por Stack (mazo), LinkedList (mano/campo) y Queue (eventos)
- Agregar HashMap para registro y búsqueda de cartas en O(1)
- Implementar excepciones propias: CartaInvalida, CampoLleno, MazoVacio, TurnoInvalido
- GestorArchivos con BufferedReader/Writer y RandomAccessFile
- Guardar y cargar partida desde archivo con PartidaSerializer
- Sistema de estadísticas con JTable (historial y ranking de victorias)
- Botones Guardar/Cargar en TableroJuego