@@ -7,37 +7,20 @@ public class CartaTrampa extends Carta implements Activar {
     private boolean activa;
 
     public CartaTrampa(String nombre, String efecto, String condicion) {
-
         super(nombre);
-
         this.efecto = efecto;
         this.condicion = condicion;
         this.activa = false;
     }
 
-    public String getEfecto() {
-        return efecto;
-    }
-
-    public String getIdEfecto() {
-        return efecto;
-    }
-
-    public String getCondicion() {
-        return condicion;
-    }
-
-    public boolean isActiva() {
-        return activa;
-    }
-
-    public void setActiva(boolean v) {
-        this.activa = v;
-    }
+    public String getEfecto() { return efecto; }
+    public String getIdEfecto() { return efecto; }
+    public String getCondicion() { return condicion; }
+    public boolean isActiva() { return activa; }
+    public void setActiva(boolean v) { this.activa = v; }
 
     @Override
     public String activarEfecto(Jugador jugador) {
-
         return activarEfecto(jugador, null);
     }
 
@@ -51,137 +34,68 @@ public class CartaTrampa extends Carta implements Activar {
         switch (efecto) {
 
             case "agujero_trampa":
-
-                if (!rival.getCampo().getZonaMonstruos().isEmpty()) {
-
-                    Monstruo ultimo =
-                        rival.getCampo()
-                             .getZonaMonstruos()
-                             .get(
-                                rival.getCampo()
-                                     .getZonaMonstruos()
-                                     .size() - 1
-                             );
-
+                if (!rival.getCampo().getZonaMonstruosLinked().isEmpty()) {
+                    Monstruo ultimo = rival.getCampo()
+                            .getZonaMonstruosLinked()
+                            .getLast();
                     if (ultimo.getNivel() >= 4) {
-
-                        rival.getCampo()
-                             .getZonaMonstruos()
-                             .remove(ultimo);
-
-                        return ultimo.getNombre() +
-                               " DESTRUIDO POR " +
-                               nombre;
+                        rival.getCampo().getZonaMonstruosLinked().remove(ultimo);
+                        return ultimo.getNombre() + " DESTRUIDO POR " + nombre;
                     }
                 }
-
                 return "NO SE PUDO ACTIVAR";
 
             case "fuerza_espejo":
-
-                rival.getCampo()
-                     .getZonaMonstruos()
-                     .clear();
-
+                rival.getCampo().getZonaMonstruosLinked().clear();
                 return "TODOS LOS MONSTRUOS DESTRUIDOS";
 
             case "negar_ataque":
-
                 return "ATAQUE CANCELADO";
 
             case "cilindro_magico":
-
                 return "DAÑO REDIRIGIDO";
 
             case "tributo_torrencial":
-
-                rival.getCampo()
-                     .getZonaMonstruos()
-                     .clear();
-
-                jugador.getCampo()
-                        .getZonaMonstruos()
-                        .clear();
-
+                rival.getCampo().getZonaMonstruosLinked().clear();
+                jugador.getCampo().getZonaMonstruosLinked().clear();
                 return "TODOS LOS MONSTRUOS DESTRUIDOS";
 
             case "agujero_sin_fondo":
-
-                if (!rival.getCampo().getZonaMonstruos().isEmpty()) {
-
-                    Monstruo ultimo =
-                        rival.getCampo()
-                             .getZonaMonstruos()
-                             .get(
-                                rival.getCampo()
-                                     .getZonaMonstruos()
-                                     .size() - 1
-                             );
-
+                if (!rival.getCampo().getZonaMonstruosLinked().isEmpty()) {
+                    Monstruo ultimo = rival.getCampo()
+                            .getZonaMonstruosLinked()
+                            .getLast();
                     if (ultimo.getAtk() >= 1500) {
-
-                        rival.getCampo()
-                             .getZonaMonstruos()
-                             .remove(ultimo);
-
-                        return ultimo.getNombre() +
-                               " DESTRUIDO";
+                        rival.getCampo().getZonaMonstruosLinked().remove(ultimo);
+                        return ultimo.getNombre() + " DESTRUIDO";
                     }
                 }
-
                 return "NO SE PUDO ACTIVAR";
 
             case "evacuacion_forzada":
-
-                if (!rival.getCampo().getZonaMonstruos().isEmpty()) {
-
-                    Monstruo m =
-                        rival.getCampo()
-                             .getZonaMonstruos()
-                             .remove(0);
-
-                    rival.getMazo().add(0, m);
-
-                    return m.getNombre() +
-                           " DEVUELTO AL MAZO";
+                if (!rival.getCampo().getZonaMonstruosLinked().isEmpty()) {
+                    Monstruo m = rival.getCampo().getZonaMonstruosLinked().removeFirst();
+                    rival.getMazoStack().push(m);
+                    return m.getNombre() + " DEVUELTO AL MAZO";
                 }
-
                 return "NO HAY MONSTRUOS";
 
             case "blindaje_sakuretsu":
-
-                if (!rival.getCampo().getZonaMonstruos().isEmpty()) {
-
-                    Monstruo m =
-                        rival.getCampo()
-                             .getZonaMonstruos()
-                             .remove(0);
-
-                    return m.getNombre() +
-                           " DESTRUIDO";
+                if (!rival.getCampo().getZonaMonstruosLinked().isEmpty()) {
+                    Monstruo m = rival.getCampo().getZonaMonstruosLinked().removeFirst();
+                    return m.getNombre() + " DESTRUIDO";
                 }
-
                 return "NO HAY MONSTRUOS";
 
             case "proteccion_waboku":
-
                 jugador.setWabokuActivo(true);
-
                 return "WABOKU ACTIVADO";
 
             case "tornado_polvo":
-
-                if (!rival.getCampo().getZonaTrampas().isEmpty()) {
-
-                    CartaTrampa destruida =
-                        rival.getCampo()
-                             .getZonaTrampas()
-                             .remove(0);
-
-                    return destruida.getNombre() +
-                           " DESTRUIDA";
+                if (!rival.getCampo().getZonaTrampasLinked().isEmpty()) {
+                    CartaTrampa destruida = rival.getCampo().getZonaTrampasLinked().removeFirst();
+                    return destruida.getNombre() + " DESTRUIDA";
                 }
-
                 return "NO HAY TRAMPAS";
         }
 
@@ -190,65 +104,33 @@ public class CartaTrampa extends Carta implements Activar {
 
     @Override
     public String getEfectoDescripcion() {
-
         switch (efecto) {
-
-            case "agujero_trampa":
-                return "Destruye monstruo rival nivel 4+";
-
-            case "fuerza_espejo":
-                return "Destruye todos los monstruos atacantes";
-
-            case "negar_ataque":
-                return "Niega un ataque rival";
-
-            case "cilindro_magico":
-                return "Redirige daño al rival";
-
-            case "tributo_torrencial":
-                return "Destruye todos los monstruos en campo";
-
-            case "agujero_sin_fondo":
-                return "Destruye monstruo rival con ATK 1500+";
-
-            case "evacuacion_forzada":
-                return "Devuelve monstruo rival al mazo";
-
-            case "blindaje_sakuretsu":
-                return "Destruye un monstruo atacante";
-
-            case "proteccion_waboku":
-                return "Anula el daño de combate este turno";
-
-            case "tornado_polvo":
-                return "Destruye una trampa del rival";
-
-            default:
-                return efecto;
+            case "agujero_trampa":      return "Destruye monstruo rival nivel 4+";
+            case "fuerza_espejo":       return "Destruye todos los monstruos atacantes";
+            case "negar_ataque":        return "Niega un ataque rival";
+            case "cilindro_magico":     return "Redirige daño al rival";
+            case "tributo_torrencial":  return "Destruye todos los monstruos en campo";
+            case "agujero_sin_fondo":   return "Destruye monstruo rival con ATK 1500+";
+            case "evacuacion_forzada":  return "Devuelve monstruo rival al mazo";
+            case "blindaje_sakuretsu":  return "Destruye un monstruo atacante";
+            case "proteccion_waboku":   return "Anula el daño de combate este turno";
+            case "tornado_polvo":       return "Destruye una trampa del rival";
+            default:                    return efecto;
         }
     }
 
     @Override
     public String mostrarInfo() {
-
         return "CARTA TRAMPA: " + nombre +
                " | EFECTO: " + efecto +
                " | CONDICION: " + condicion;
     }
 
     @Override
-    public String getTipo() {
-
-        return "Trampa";
-    }
+    public String getTipo() { return "Trampa"; }
 
     @Override
     public String getDescripcion() {
-
-        return "Efecto: " +
-               getEfectoDescripcion() +
-               " (Condición: " +
-               condicion +
-               ")";
+        return "Efecto: " + getEfectoDescripcion() + " (Condición: " + condicion + ")";
     }
 }
